--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@ Quer saber mais? Confira ⤵️</p>
             </div>
             <div class="grid grid-cols-3 gap-1 mt-1">
                 <div class="image-with-line">
-                    <img alt="Granado product display" class="w-full aspect-square object-cover" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBBFr09nSLRqoBZDnroJKqVGGF61Q_GzCRoUrZZApveq3apTNnStcpl3ncKO9R9jhhl7g&amp;usqp=CAU">
+                    <img alt="Granado product display" class="w-full aspect-square object-cover" src="images/principia.post1.jpg">
                 </div>
-                <img alt="Granado store interior" class="w-full aspect-square object-cover" src="https://media.licdn.com/dms/image/D4D22AQFPc2jjb3U2mg/feedshare-shrink_800/0/1704461401941?e=2147483647&amp;v=beta&amp;t=Py9UPEi_0eo9wa3bWyp2rauSNWJNN3mlb7ytf88dg74">
+                <img alt="Granado store interior" class="w-full aspect-square object-cover" src="images/principia.post2.jpg">
                 <img alt="Granado product lineup" class="w-full aspect-square object-cover" src="images/Blog_36.jpg">
-                <img alt="Granado skincare products" class="w-full aspect-square object-cover" src="https://media.licdn.com/dms/image/D4D22AQEn1h_UR3982Q/feedshare-shrink_800/0/1704463215078?e=2147483647&amp;v=beta&amp;t=NaECHkwV-sWXARw7n6siJaxQfdXJAxfXHs-C6ZV17Rk">
+                <img alt="Granado skincare products" class="w-full aspect-square object-cover" src="images/Snapinsta.app_142527029_2739946282985504_6669494772223172291_n_1080.jpg">
                 <img alt="Granado soap collection" class="w-full aspect-square object-cover" src="images/https%253A%252F%252Fsubstack-post-media.s3.amazonaws.com%252Fpublic%252Fimages%252Fa10a9e89-8d88-4285-b8cd-9d4d948a5650_640x437.jpeg">
                 <img alt="Granado perfume bottles" class="w-full aspect-square object-cover" src="images/Blog_17.jpg">
                 <img alt="Granado store facade" class="w-full aspect-square object-cover" src="images/nperca1570.jpg">
