--- a/index.html
+++ b/index.html
@@ -297,16 +297,16 @@ Quer saber mais? Confira ⤵️</p>
             </div>
             <div class="grid grid-cols-3 gap-1 mt-1">
                 <div class="image-with-line">
-                    <img alt="Granado product display" class="w-full aspect-square object-cover" src="images/principia.post1.jpg">
+                    <img alt="Granado product display" class="w-full aspect-square object-cover" src="images/2RY0071-1.jpg">
                 </div>
-                <img alt="Granado store interior" class="w-full aspect-square object-cover" src="images/principia.post2.jpg">
+                <img alt="Granado store interior" class="w-full aspect-square object-cover" src="images/O Skincare tá ON a partir de R$43,99.jpg">
                 <img alt="Granado product lineup" class="w-full aspect-square object-cover" src="images/Blog_36.jpg">
                 <img alt="Granado skincare products" class="w-full aspect-square object-cover" src="images/Snapinsta.app_142527029_2739946282985504_6669494772223172291_n_1080.jpg">
                 <img alt="Granado soap collection" class="w-full aspect-square object-cover" src="images/https%253A%252F%252Fsubstack-post-media.s3.amazonaws.com%252Fpublic%252Fimages%252Fa10a9e89-8d88-4285-b8cd-9d4d948a5650_640x437.jpeg">
                 <img alt="Granado perfume bottles" class="w-full aspect-square object-cover" src="images/Blog_17.jpg">
                 <img alt="Granado store facade" class="w-full aspect-square object-cover" src="images/nperca1570.jpg">
                 <img alt="Granado bath products" class="w-full aspect-square object-cover" src="images/post_thumbnail-d0c5f2aebc48a5b24a40c10db3c56ede.jpg">
-                <img alt="Granado gift set" class="w-full aspect-square object-cover" src="images/2RY0071-1.jpg">
+                <img alt="Granado gift set" class="w-full aspect-square object-cover" src="images/principia post1.jpg">
             </div>
             <div class="flex flex-col items-center justify-center mt-4 mb-20">
                 <p class="text-gray-500 text-sm mb-2">Carregando publicações antigas</p>
