--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="px-4 mt-8">
                 <div class="flex items-center">
                     <div id="profileImageContainer" class="profile-image-container">
-                        <img id="profileImage" alt="Granado logo with green background and white text" class="profile-image" src="https://ozksgdmyrqcxcwhnbepg.supabase.co/storage/v1/object/public/assets/5274/0966762b-486f-4671-9ca3-7f8cfb5740b5">
+                        <img id="profileImage" alt="Granado logo with green background and white text" class="profile-image" src="images/principia banner 2 - limpo.png">
                     </div>
                     <div class="flex-1 ml-8">
                         <div class="flex justify-between text-center">
@@ -297,7 +297,7 @@ Quer saber mais? Confira ⤵️</p>
             </div>
             <div class="grid grid-cols-3 gap-1 mt-1">
                 <div class="image-with-line">
-                    <img alt="Granado product display" class="w-full aspect-square object-cover" src="images/2RY0071-1.jpg">
+                    <img alt="Granado product display" class="w-full aspect-square object-cover" src="images/principia post1.jpg">
                 </div>
                 <img alt="Granado store interior" class="w-full aspect-square object-cover" src="images/O Skincare tá ON a partir de R$43,99.jpg">
                 <img alt="Granado product lineup" class="w-full aspect-square object-cover" src="images/Blog_36.jpg">
@@ -306,7 +306,7 @@ Quer saber mais? Confira ⤵️</p>
                 <img alt="Granado perfume bottles" class="w-full aspect-square object-cover" src="images/Blog_17.jpg">
                 <img alt="Granado store facade" class="w-full aspect-square object-cover" src="images/nperca1570.jpg">
                 <img alt="Granado bath products" class="w-full aspect-square object-cover" src="images/post_thumbnail-d0c5f2aebc48a5b24a40c10db3c56ede.jpg">
-                <img alt="Granado gift set" class="w-full aspect-square object-cover" src="images/principia post1.jpg">
+                <img alt="Granado gift set" class="w-full aspect-square object-cover" src=" images/2RY0071-1.jpg"> 
             </div>
             <div class="flex flex-col items-center justify-center mt-4 mb-20">
                 <p class="text-gray-500 text-sm mb-2">Carregando publicações antigas</p>
@@ -328,7 +328,7 @@ Quer saber mais? Confira ⤵️</p>
                     <img src="images/IMG-7307.jpg" alt="Reels icon" class="w-6 h-6 object-cover">
                 </div>
                 <div class="nav-icon">
-                    <img alt="Granado logo with green background and white text" class="w-6 h-6 rounded-full" src="https://ozksgdmyrqcxcwhnbepg.supabase.co/storage/v1/object/public/assets/5274/0966762b-486f-4671-9ca3-7f8cfb5740b5">
+                    <img alt="Granado logo with green background and white text" class="w-6 h-6 rounded-full" src="images/principia banner 2 - limpo.png">
                 </div>
             </div>
         </nav>
@@ -341,9 +341,9 @@ Quer saber mais? Confira ⤵️</p>
     <div id="popup" class="hidden">
         <div class="popup-header">
             <div class="popup-profile">
-                <img src="https://ozksgdmyrqcxcwhnbepg.supabase.co/storage/v1/object/public/assets/5274/0966762b-486f-4671-9ca3-7f8cfb5740b5" alt="Granado logo">
+                <img src="images/principia banner 2 - limpo.png">
                 <div>
-                    <span class="font-semibold text-sm">granadopharmacias</span>
+                    <span class="font-semibold text-sm">Principiaskincare</span>
                     <img src="https://img.icons8.com/?size=512&amp;id=2sZ0sdlG9kWP&amp;format=png" alt="Verified icon" class="verified-icon-popup" width="10" height="10">
                 </div>
             </div>
