--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <header class="fixed-header flex items-center justify-between bg-white">
             <i class="fas fa-arrow-left text-black text-lg"></i>
             <h1 class="text-black text-base font-semibold flex items-center">
-                granadopharmacias
+                Principiaskincare
                 <span class="verified-icon">
                     <img src="https://img.icons8.com/?size=512&amp;id=2sZ0sdlG9kWP&amp;format=png" alt="Verified icon">
                 </span>
