--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@ Quer saber mais? Confira ⤵️</p>
             <span class="text-xs text-gray-500">Publicidade</span>
         </div>
         <div class="popup-content">
-            <p class="text-base font-medium mb-2">70% OFF em comemoração aos 154 anos de Granado! 🎉</p>
-            <p class="text-sm text-gray-600">Aproveite nossa promoção especial de aniversário e renove sua coleção de produtos Granado com descontos incríveis!</p>
+            <p class="text-base font-medium mb-2">70% OFF para transformar sua rotina de skincare! 🌟 Os dermocosméticos da Principia que sua pele merece, com frete grátis e só até acabar o estoque!</p>
+            <p class="text-sm text-gray-600">Aproveite nossa promoção de Black Friday para renovar seu skincare com descontos irresistíveis! Cuide da sua pele com a qualidade Principia.</p>
             <p class="text-xs text-gray-500 mt-2">Conta autenticada</p>
         </div>
         <a href="https://melhorprodutogran.myshopify.com" target="_blank" class="popup-button block">
