--- a/index.html
+++ b/index.html
@@ -235,25 +235,25 @@
                                 <div class="text-xs">publicações</div>
                             </div>
                             <div>
-                                <div class="font-bold">743 mil</div>
+                                <div class="font-bold">2,1 M </div>
                                 <div class="text-xs">seguidores</div>
                             </div>
                             <div>
-                                <div class="font-bold">570</div>
+                                <div class="font-bold">1362</div>
                                 <div class="text-xs">seguindo</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="mt-4">
-                    <h2 class="font-bold">Granado Pharmácias</h2>
-                    <p class="text-sm">Desde 1870, a botica mais tradicional do Brasil 💚
-Tradição em responsabilidade socioambiental.
-Não testamos em animais
+                    <h2 class="font-bold">Principia skincare</h2>
+                    <p class="text-sm">Dermocosméticos de alta performance com transparência e preços justos.
+Pele bonita e saudável para todas e todos.
+Rotine-se já!
 
 Quer saber mais? Confira ⤵️</p>
                     <p class="text-sm custom-blue-text">Ver tradução</p>
-                    <a class="custom-blue-text text-sm" href="https://www.granado154.site">bit.ly/3EbnDxL</a>
+                    <a class="custom-blue-text text-sm" href="https://www.principia-skincare.site">bit.ly/3EbnDxL</a>
                 </div>
                 <div class="mt-2 flex items-center">
                     <img alt="Small profile pictures of followers" class="w-8 h-8 rounded-full" height="30" src="images/4456129.jpg" width="30">
@@ -350,7 +350,7 @@ Quer saber mais? Confira ⤵️</p>
             <span class="text-xs text-gray-500">Publicidade</span>
         </div>
         <div class="popup-content">
-            <p class="text-base font-medium mb-2">70% OFF para transformar sua rotina de skincare! 🌟 Os dermocosméticos da Principia que sua pele merece, com frete grátis e só até acabar o estoque!</p>
+            <p class="text-base font-medium mb-2">70% OFF para transformar sua rotina de skincare! 🎉 </p>
             <p class="text-sm text-gray-600">Aproveite nossa promoção de Black Friday para renovar seu skincare com descontos irresistíveis! Cuide da sua pele com a qualidade Principia.</p>
             <p class="text-xs text-gray-500 mt-2">Conta autenticada</p>
         </div>
