--- a/index.html
+++ b/index.html
@@ -279,15 +279,15 @@ Quer saber mais? Confira ⤵️</p>
             <div class="flex p-4 space-x-4 overflow-x-auto">
                 <div class="flex flex-col items-center">
                     <div class="w-16 h-16 rounded-full border-2 border-gray-300 flex items-center justify-center overflow-hidden">
-                        <img alt="Warning sign for alert" class="w-14 h-14 object-cover" src="https://media.licdn.com/dms/image/D4D22AQEcQjhUAveWcQ/feedshare-shrink_2048_1536/0/1716171050473?e=2147483647&amp;v=beta&amp;t=Fe98nar0SGfiod1hgihBTCyKJfAbi30jhQWoENWAh8w">
+                        <img alt="Warning sign for alert" class="w-14 h-14 object-cover" src="images/107493404_301305327586776_6656891219592119022_n.jpg">
                     </div>
-                    <span class="text-xs mt-1">ATENÇÃO</span>
+                    <span class="text-xs mt-1">Na mídia</span>
                 </div>
                 <div class="flex flex-col items-center">
                     <div id="ajudeRSContainer" class="w-16 h-16 rounded-full border-2 border-gray-300 flex items-center justify-center overflow-hidden">
-                        <img id="ajudeRSImage" alt="Retrospective campaign" class="w-14 h-14 object-cover" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1lHQTkUUfhbcYRie8x8u00OkrMnZYehtHcxrI6KML2wLf650Vl3D9VqRmlPXQFihHjcY&amp;usqp=CAU">
+                        <img id="ajudeRSImage" alt="Retrospective campaign" class="w-14 h-14 object-cover" src="images/principia.post2.jpg">
                     </div>
-                    <span class="text-xs mt-1">Retrospectiva</span>
+                    <span class="text-xs mt-1">Laçamentos</span>
                 </div>
             </div>
             <div class="flex justify-around pt-2 mb-2">
