--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ Quer saber mais? Confira ⤵️</p>
                 </div>
                 <div class="flex flex-col items-center">
                     <div id="ajudeRSContainer" class="w-16 h-16 rounded-full border-2 border-gray-300 flex items-center justify-center overflow-hidden">
-                        <img id="ajudeRSImage" alt="Retrospective campaign" class="w-14 h-14 object-cover" src="images/principia.post2.jpg">
+                        <img id="ajudeRSImage" alt="Retrospective campaign" class="w-14 h-14 object-cover" src="images/Snapinsta.app_404292411_18091203727381294_1137262737478806038_n_1080.jpg">
                     </div>
                     <span class="text-xs mt-1">Laçamentos</span>
                 </div>
