--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@ Quer saber mais? Confira ⤵️</p>
             <div class="flex p-4 space-x-4 overflow-x-auto">
                 <div class="flex flex-col items-center">
                     <div class="w-16 h-16 rounded-full border-2 border-gray-300 flex items-center justify-center overflow-hidden">
-                        <img alt="Warning sign for alert" class="w-14 h-14 object-cover" src="images/108493404_301305327586776_6656891219592119022_n.jpg">
+                        <img alt="Warning sign for alert" class="w-14 h-14 object-cover" src="images/images/108493404_301305327586776_6656891219592119022_n.jpg">
                     </div>
                     <span class="text-xs mt-1">Na mídia</span>
                 </div>
                 <div class="flex flex-col items-center">
                     <div id="ajudeRSContainer" class="w-16 h-16 rounded-full border-2 border-gray-300 flex items-center justify-center overflow-hidden">
-                        <img id="ajudeRSImage" alt="Retrospective campaign" class="w-14 h-14 object-cover" src="images/Snapinsta.app_404292411_18091203727381294_1137262737478806038_n_1080.jpg">
+                        <img id="ajudeRSImage" alt="Retrospective campaign" class="w-14 h-14 object-cover" src="images/snapinsta.jpg">
                     </div>
                     <span class="text-xs mt-1">Laçamentos</span>
                 </div>
