--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
                 </div>
                 <div class="mt-4">
                     <h2 class="font-bold">Principia skincare</h2>
-                    <p class="text-sm">Dermocosméticos de alta performance com transparência e preços justos.
+                    <p class="text-sm">Dermocosméticos de alta performance com transparência e preços justos.</p>
                     
 Rotine-se já!
 
-Quer saber mais? Confira ⤵️</p>
+<p class="text-sm">Quer saber mais? Confira ⤵️</p>
                     <p class="text-sm custom-blue-text">Ver tradução</p>
                     <a class="custom-blue-text text-sm" href="https://www.principia-skincare.site">bit.ly/3EbnDxL</a>
                 </div>
