--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                 <div class="mt-4">
                     <h2 class="font-bold">Principia skincare</h2>
                     <p class="text-sm">Dermocosméticos de alta performance com transparência e preços justos.</p>
-                    
-Rotine-se já!
+ <p class="text-sm"> Pele bonita e saudável para todas e todos.</p>                  
+<p class="text-sm">Rotine-se já!</p>
 
 <p class="text-sm">Quer saber mais? Confira ⤵️</p>
                     <p class="text-sm custom-blue-text">Ver tradução</p>
