--- a/index.html
+++ b/index.html
@@ -431,8 +431,13 @@
             }, 15000);
         });
         
-        
     </script>
+
+      <script>
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+  });
+</script>
 
   
 <!--	<script type="text/javascript">
